--- a/retro.html
+++ b/retro.html
@@ -21,7 +21,7 @@
 		<nav class="transparent z-depth-0">
 			<div class="nav-wrapper">
 				<a href="#" class="brand-logo">
-				<img src="img/logo.svg" class="w3-round" alt="Erro">
+					<img src="img/logo.svg" class="w3-round" alt="Logo">
 				</a>
 				<ul id="nav-mobile" class="right hide-on-med-and-down">
 					<li><a href="#">blog</a></li>
@@ -38,33 +38,65 @@
 					Mussum Ipsum, cacilds vidis litro abertis. Mé faiz elementum girarzis, nisi eros vermeio. Todo mundo vê os porris que eu tomo, mas ninguém vê os tombis que eu levo! Mais vale um bebadis conhecidiss, que um alcoolatra anonimis. Sapien in monti palavris qui num significa nadis i pareci latim.
 					</p>
 					<p>
-					Mussum Ipsum, cacilds vidis litro abertis. Mé faiz elementum girarzis, nisi eros vermeio. Todo mundo vê os porris que eu tomo, mas ninguém vê os tombis que eu levo! Mais vale um bebadis conhecidiss, que um alcoolatra anonimis. Sapien in monti palavris qui num significa nadis i pareci latim.
+					Não sou faixa preta cumpadi, sou preto inteiris, inteiris. Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e fermentis. Mais vale um bebadis conhecidiss, que um alcoolatra anonimis. In elementis mé pra quem é amistosis quis leo.
 					</p>
 				</div>
 				<div class="col s4">
-					<p>Mussum Ipsum, cacilds vidis litro abertis. Mé faiz elementum girarzis, nisi eros vermeio. Todo mundo vê os porris que eu tomo, mas ninguém vê os tombis que eu levo! Mais vale um bebadis conhecidiss, que um alcoolatra anonimis. Sapien in monti palavris qui num significa nadis i pareci latim.</p>
+					<p>Sapien in monti palavris qui num significa nadis i pareci latim.  A ordem dos tratores não altera o pão duris. Suco de cevadiss deixa as pessoas mais interessantis. Praesent vel viverra nisi. Mauris aliquet nunc non turpis scelerisque, eget.</p>
+					<blockquote>
+					uma citação importante kashdbash laksjcnfalas bsadlhcfnsdl ljnciuW.
+					</blockquote>
+					<p>
+					Vehicula non. Ut sed ex eros. Vivamus sit amet nibh non tellus tristique interdum. Sapien in monti palavris qui num significa nadis i pareci latim. Posuere libero varius. Nullam a nisl ut ante blandit hendrerit. Aenean sit amet nisi. Nullam volutpat risus nec leo commodo, ut interdum diam laoreet. Sed non consequat odio.
+					</p>
 				</div>
 				<div class="col s4">
-					<p>Mussum Ipsum, cacilds vidis litro abertis. Mé faiz elementum girarzis, nisi eros vermeio. Todo mundo vê os porris que eu tomo, mas ninguém vê os tombis que eu levo! Mais vale um bebadis conhecidiss, que um alcoolatra anonimis. Sapien in monti palavris qui num significa nadis i pareci latim.</p>
+					<p>Tá deprimidis, eu conheço uma cachacis que pode alegrar sua vidis. Si u mundo tá muito paradis? Toma um mé que o mundo vai girarzis! Quem manda na minha terra sou euzis! Viva Forevis aptent taciti sociosqu ad litora torquent.</p>
+					<p>
+					Em pé sem cair, deitado sem dormir, sentado sem cochilar e fazendo pose. Cevadis im ampola pa arma uma pindureta. Nec orci ornare consequat. Praesent lacinia ultrices consectetur. Sed non ipsum felis. A ordem dos tratores não altera o pão duris.
+					</p>
 				</div>
 			</div>
 		</div>
-		<footer class="page-footer">
+		<footer class="page-footer white z-depth-0">
 			<div class="container">
 				<div class="row">
 					<div class="col l6 s12">
-						<h5 class="white-text">Rio de janeiro</h5>
-						<p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+						<h5 class="black-text">
+							<a href="#">
+								<img src="img/icones/map-location.svg" class="map" alt="map">
+							</a>
+							Rio de janeiro
+						</h5>
 					</div>
 					<div class="col l4 offset-l2 s12">
-						<h5 class="white-text">Links</h5>
-						<ul>
-							<li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-							<li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-							<li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-							<li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+						<h5 class="black-text">Links</h5>
+						<ul id="rodape">
+							<li><a class="link-rodape" href="#!">
+									<img src="img/icones/redes-sociais/twitter.svg" class="redes" alt="twitter">
+								</a>
+							</li>
+							<li><a class="link-rodape" href="#!">
+									<img src="img/icones/redes-sociais/pinterest.svg" class="redes" alt="pinterest">
+								</a>
+							</li>
+							<li><a class="link-rodape" href="#!">
+									<img src="img/icones/redes-sociais/instagram.svg" class="redes" alt="instagram">
+
+								</a>
+							</li>
+							<li><a class="link-rodape" href="#!">
+									<img src="img/icones/redes-sociais/facebook.svg" class="redes" alt="facebook">
+
+								</a>
+							</li>
 						</ul>
 					</div>
+				</div>
+			</div>
+			<div class="footer-copyright">
+				<div class="container black-text">
+				© 2017 Copyright
 				</div>
 			</div>
 		</footer>
