--- a/retro.html
+++ b/retro.html
@@ -58,7 +58,7 @@
 				</div>
 			</div>
 		</div>
-		<footer class="page-footer white z-depth-0">
+		<footer class="page-footer">
 			<div class="container">
 				<div class="row">
 					<div class="col l6 s12">
