--- a/retro.html
+++ b/retro.html
@@ -71,26 +71,18 @@
 					</div>
 					<div class="col l4 offset-l2 s12">
 						<h5 class="black-text">Links</h5>
-						<ul id="rodape">
-							<li><a class="link-rodape" href="#!">
-									<img src="img/icones/redes-sociais/twitter.svg" class="redes" alt="twitter">
-								</a>
-							</li>
-							<li><a class="link-rodape" href="#!">
-									<img src="img/icones/redes-sociais/pinterest.svg" class="redes" alt="pinterest">
-								</a>
-							</li>
-							<li><a class="link-rodape" href="#!">
-									<img src="img/icones/redes-sociais/instagram.svg" class="redes" alt="instagram">
-
-								</a>
-							</li>
-							<li><a class="link-rodape" href="#!">
-									<img src="img/icones/redes-sociais/facebook.svg" class="redes" alt="facebook">
-
-								</a>
-							</li>
-						</ul>
+						<a class="link-rodape" href="#!">
+							<img src="img/icones/redes-sociais/twitter.svg" class="redes" alt="twitter">
+						</a>
+						<a class="link-rodape" href="#!">
+							<img src="img/icones/redes-sociais/pinterest.svg" class="redes" alt="pinterest">
+						</a>
+						<a class="link-rodape" href="#!">
+							<img src="img/icones/redes-sociais/instagram.svg" class="redes" alt="instagram">
+						</a>
+						<a class="link-rodape" href="#!">
+							<img src="img/icones/redes-sociais/facebook.svg" class="redes" alt="facebook">
+						</a>
 					</div>
 				</div>
 			</div>
